[package]
name = "os_socketaddr"
version = "0.2.3"
description = "A type for handling platform-native socket addresses (struct sockaddr)"
keywords = ["sockaddr", "libc", "socket"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]
license = "MIT OR Apache-2.0"
authors = ["Anthony Baire <ayba@free.fr>"]
repository = "https://github.com/a-ba/os_socketaddr"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
libc = "0.2"

[target.'cfg(target_family="windows")'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "ws2tcpip"] }
